fixtures/func_generics_with_constraints/lib/index.esc
fn addNums1(a: number, b: number) -> number {
    return a + b
}

fn addStrs1<A: string, B: string>(a: A, b: B) {
    return addNums1(a, b) // error
}

fn addNums2<A: number, B: number>(a: A, b: B) -> number {
    return addNums1(a, b) // okay
}

val addStrs3 = fn<A: string, B: string>(a: A, b: B) {
    return addNums1(a, b) // error
}

val addNums4 = fn<A: number, B: number>(a: A, b: B) -> number {
    return addNums1(a, b) // okay
}

fn main() {
    addNums2("hello", 5)
    addNums4("hello", 5)
}